This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
3/13/25: Allowed the center of the pattern for the calibrate coma versus IS
pattern to be moved with the marker point.

3/13/25: Added separate beam tilt for autofocusing in LM.

3/13/25: Expanded One-line scripts from 5 to 10.

3/13/25: Moved Set C2 Aperture Size from Calibration to Tasks menu.

3/13/25: Implemented and documented defaults properly for AlignBetweenMags.

3/13/25: Fixed montages opened with SetupPolygonMontage becoming unusable
after closing the file (In 4.1).

3/11/25: Fixed loss of mag value indicating whether hex IS vectors were
transformed when reading in settings (In 4.1).

3/11/25: Handled problems with hole axis being so close to 0 degrees that some
mesh openings have the axis below, some above 0: fixed incorrect multi-hole
combine and stabilized the orientation of IS vectors so that acquisition on
already combined items would work if different map hole vectors are used.

3/11/25: Fixed leakage of subset and multishot settings between medium mag map
and final acquisition parameters in multigrid.

3/11/25: Fixed crash in multigrid in 3/7/25 version.

3/7/25: Fixed unloading of grid after second trial of realigning reloaded
grid to correct for failure on first try.

3/7/25: SEM_4-1-22
3/7/25: Allowed spaces between # and ScriptName or LongName in a Python script
(In 4.1).

3/7/25: Fixed using "print" in Python script with a % in the string (In 4.1).

3/6/25: Fixed hex hole vectors being stored for 1/3 pattern by mistake.

3/6/25: Fixed problem with multi-hole combiner for hex pattern (In 4.1).

3/6/25: Fixed SEMCCD plugin to restart shrmemframe properly when using GPU
through it (In 4.1).

3/5/25: Fixed save and restore of read modes for camera parameter sets when