@@ -147,6 +147,7 @@ INT_PROP_TEST("HasSimpleOriginSystem", scope->, HasSimpleOrigin)
 INT_PROP_TEST("DewarVacCapabilities", scope->, DewarVacCapabilities)
 INT_PROP_TEST("ScopeCanFlashFEG", scope->, ScopeCanFlashFEG)
 INT_PROP_TEST("ScopeHasPhasePlate", scope->, ScopeHasPhasePlate)
+INT_PROP_TEST("MonitorC2ApertureSize", scope->, MonitorC2ApertureSize)
 INT_PROP_TEST("SkipNormalizations", scope->, SkipNormalizations)
 BOOL_PROP_TEST("UseImageBeamTilt", scope->, UseImageBeamTilt)
 INT_PROP_TEST("ScreenRaiseDelay", scope->, ScreenRaiseDelay)
