@@ -1815,7 +1815,7 @@
         <TR>
           <TD class="scriptcommand">ToggleBufferDisplay buf #I #N #X</TD>
           <TD>Starts automatic toggling between the A buffer and <b>buf</b> with an interval given by <b>#I</b>
-            in msec, and the minimum and maximum number of display switches given by <b>#N</b> ans <b>#X</b>.
+            in msec, and the minimum and maximum number of display switches given by <b>#N</b> and <b>#X</b>.
             Image acquisitions and other actions can be taken.  When an acquisition is done, it will 
             continue toggling until the minimum count is reached before processing the image.  If the
              buffer being toggled to is in the last rolling buffer, an acquisition will be delayed until the
